Added some scala .md files